[tool.poetry]
name = "transformer"
version = "0.1.0"
description = ""
authors = ["tinumide <summittinuade@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
